--- a/Biblioteka/appsettings.json
+++ b/Biblioteka/appsettings.json
@@ -1,18 +1,20 @@
 {
+    "AllowedHosts": "*",
     "ConnectionStrings": {
         "BiblioDBString": "Server=DESKTOP-975QG3A;Database=Biblioteka;Trusted_Connection=true;Encrypt=false;"
+    },
+    "Jwt": {
+        "Key": "your_very_secure_and_long_secret_key_123!",
+        "Issuer": "000",
+        "Audience": "Aud"
     },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information",
+            "Microsoft.AspNetCore": "Debug",
+            "Microsoft.AspNetCore.Authentication": "Debug"
         }
-    },
-    "AllowedHosts": "*",
-
-    "Jwt": {
-        "Key": "000",
-        "Issuer": "000",
-        "Audience": "000"
     }
 }
