--- a/Biblioteka/appsettings.json
+++ b/Biblioteka/appsettings.json
@@ -1,13 +1,9 @@
 {
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "BiblioDBString": "Server=DESKTOP-975QG3A;Database=Biblioteka;Trusted_Connection=true;Encrypt=false;"
-    },
-    "Jwt": {
-        "Key": "your_very_secure_and_long_secret_key_123!",
-        "Issuer": "000",
-        "Audience": "Aud"
-    },
+  "ConnectionStrings": {
+    "BiblioDBString": "Server=1C-1220-1\\SQLEXPRESS;Database=Biblioteka;Trusted_Connection=true;Encrypt=false;"
+  },
+    
     "Logging": {
         "LogLevel": {
             "Default": "Information",
