--- a/Biblioteka/appsettings.json
+++ b/Biblioteka/appsettings.json
@@ -1,8 +1,8 @@
 {
     "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "BiblioDBString": "Server=1C-1220-1\\SQLEXPRESS;Database=Biblioteka;Trusted_Connection=true;Encrypt=false;"
-  },
+    "ConnectionStrings": {
+        "BiblioDBString": "Server=DESKTOP-975QG3A;Database=Biblioteka;Trusted_Connection=true;Encrypt=false;"
+    },
     
     "Logging": {
         "LogLevel": {
