--- a/BooksService/appsettings.json
+++ b/BooksService/appsettings.json
@@ -1,7 +1,7 @@
 {
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "PhotosDbConnection": "Server=DESKTOP-975QG3A;Database=Photo;Trusted_Connection=true;Encrypt=false;MultipleActiveResultSets=True;"
+        "BookDbConnection": "Server=DESKTOP-975QG3A;Database=Book;Trusted_Connection=true;Encrypt=false;MultipleActiveResultSets=True;"
     },
     "Logging": {
         "LogLevel": {
